[gd_scene load_steps=4 format=3 uid="uid://33nuh616c0bw"]

[ext_resource type="Script" uid="uid://p04sylh3w5kh" path="res://scenes/coupon_container/coupon_container.gd" id="1_7bsm0"]
[ext_resource type="Script" uid="uid://iib6spef5mex" path="res://scripts/number_icon_factory.gd" id="1_y71mn"]
[ext_resource type="Script" uid="uid://d3vmvsbtctclt" path="res://scripts/coupon_spawner.gd" id="2_breid"]

[node name="CouponContainer" type="ScrollContainer"]
custom_minimum_size = Vector2(557, 800)
offset_right = 557.0
offset_bottom = 800.0
script = ExtResource("1_7bsm0")
is_check_backpack = true
is_battle = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme_override_constants/separation = 8

[node name="NumberIconFactory" type="Node" parent="."]
script = ExtResource("1_y71mn")
metadata/_custom_type_script = "uid://iib6spef5mex"

[node name="CouponSpawner" type="Node" parent="." node_paths=PackedStringArray("container")]
script = ExtResource("2_breid")
container = NodePath("../VBoxContainer")
metadata/_custom_type_script = "uid://d3vmvsbtctclt"
